--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "electron-find",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Find all matches for the text in electron app",
   "main": "src/index.js",
   "scripts": {
-    "e": "node_modules/.bin/electron example/main.js",
-    "e2": "node_modules/.bin/electron example2/main.js"
+    "example": "npx electron example/main.js"
   },
   "repository": {
     "type": "git",
@@ -17,13 +16,14 @@
     "search",
     "match"
   ],
-  "author": "TheoXiong",
+  "author": "Adam Roddy",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/roddyaj/electron-find/issues"
   },
   "homepage": "https://github.com/roddyaj/electron-find#readme",
   "devDependencies": {
-    "electron": "^2.0.0"
-  }
+    "electron": "13.1.4"
+  },
+  "dependencies": {}
 }
